<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">JEBAO</string>
    <string name="bnt_custom_title">CU</string>
    <string name="bnt_delete">Delete</string>
    <string name="bnt_giveup">abandon</string>
    <string name="bnt_login_login">Login</string>
    <string name="bnt_login_regedit">Register</string>
    <string name="bnt_m1_title">M1</string>
    <string name="bnt_m2_title">M2</string>
    <string name="bnt_m3_title">M3</string>
    <string name="bnt_m4_title">M4</string>
    <string name="bnt_m5_title">M5</string>
    <string name="bnt_pumpb1_title">Night</string>
    <string name="bnt_pumpb2_title">Feed</string>
    <string name="bnt_pumpb3_title">Sync</string>
    <string name="bnt_pumpb4_title">Async</string>
    <string name="bnt_regedit_over">Register</string>
    <string name="bnt_run">Run</string>
    <string name="bnt_submit">Save</string>
    <string name="bnt_unbind_her">Remove the binding of others</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="facebook_app_id">1548440642074664</string>
    <string name="hello_world">WIFI Zhaopin intelligent intimate life</string>
    <string name="lable_appinfo_downprogress">Download progress</string>
    <string name="lable_appinfo_update">Discover new version</string>
    <string name="lable_appinfo_ver">software version</string>
    <string name="lable_bnt_reserve1">Preset1</string>
    <string name="lable_bnt_reserve2">Preset2</string>
    <string name="lable_clear_data">Clear data?</string>
    <string name="lable_day_friday">Friday</string>
    <string name="lable_day_monday">Monday</string>
    <string name="lable_day_saturday">Saturday</string>
    <string name="lable_day_sunday">Sunday</string>
    <string name="lable_day_thursday">Thursday</string>
    <string name="lable_day_tuesday">Tuesday</string>
    <string name="lable_day_wednesday">Wednesday</string>
    <string name="lable_device_binded">device is associated</string>
    <string name="lable_device_bindok">Device Bind success</string>
    <string name="lable_devset_name">Name</string>
    <string name="lable_devset_stoztime">Man to Auto Time (min)</string>
    <string name="lable_graphic_singbottom">Bottom:</string>
    <string name="lable_graphic_singheight">Height:</string>
    <string name="lable_input_apinfo">Please enter the Wi-Fi name password</string>
    <string name="lable_input_apname">Wi-Fi name(SSID)</string>
    <string name="lable_input_appass">Password(case-sensitive)</string>
    <string name="lable_input_showpass">show password</string>
    <string name="lable_login_auto">Auto login</string>
    <string name="lable_login_findpass">Retrieve</string>
    <string name="lable_login_password">Password</string>
    <string name="lable_login_remember">Remember</string>
    <string name="lable_login_username">Account</string>
    <string name="lable_pumpstr_amode">AMODE</string>
    <string name="lable_pumpstr_endtime">End Time:</string>
    <string name="lable_pumpstr_feedset">FEED Mode Set:</string>
    <string name="lable_pumpstr_flow">Flow</string>
    <string name="lable_pumpstr_frequency">Frequency</string>
    <string name="lable_pumpstr_master">Master</string>
    <string name="lable_pumpstr_minute">minute</string>
    <string name="lable_pumpstr_nightset">Night Mode Set:</string>
    <string name="lable_pumpstr_pausetime">The Pause Time:</string>
    <string name="lable_pumpstr_rename">Rename:</string>
    <string name="lable_pumpstr_slave">Slave</string>
    <string name="lable_pumpstr_starttime">Start Time:</string>
    <string name="lable_regedit_email">Email Address</string>
    <string name="lable_regedit_newpass">New Password</string>
    <string name="lable_regedit_nikename">Username</string>
    <string name="lable_regedit_repass">Confirm Password</string>
    <string name="lable_save_data">Save data?</string>
    <string name="lable_title_devgroup">Group</string>
    <string name="lable_title_manual">Manual</string>
    <string name="lable_title_program">Program</string>
    <string name="lable_title_setting">Setting</string>
    <string name="lable_title_transition">Transition</string>
    <string name="lable_userinfo_account">Account</string>
    <string name="lable_userinfo_email">email</string>
    <string name="lable_userinfo_mobile">Phone</string>
    <string name="lable_userinfo_nikename">Username</string>
    <string name="lable_userinfo_password">password</string>
    <string name="menu_item_about">About us</string>
    <string name="menu_item_alone">device list</string>
    <string name="menu_item_config">configure the device</string>
    <string name="menu_item_exit">Exit App</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_group">device grouping</string>
    <string name="menu_item_manual">Description</string>
    <string name="menu_item_mydevice">Devices</string>
    <string name="menu_item_scan">sweep the</string>
    <string name="menu_item_setting">Setting</string>
    <string name="menu_item_shortcut">Detected</string>
    <string name="menu_item_user">UserInfo</string>
    <string name="msg_manual_adjust">Manual adjustment will stop the timer program</string>
    <string name="msg_please_select_dev">Please select device</string>
    <string name="msg_select_dev_toomuch">Only %1$d devices can be selected</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_No">No</string>
    <string name="str_OK">OK</string>
    <string name="str_Yes">Yes</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_config_failure">configuration failed.</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_confirm_exit">OK to exit it?</string>
    <string name="str_datasubmit_ok">submitted successfully</string>
    <string name="str_dev_tongdong">AK-60_</string>
    <string name="str_dev_tongdong6l">AK-70_</string>
    <string name="str_dev_tongdongal150">AL-150_</string>
    <string name="str_dev_tongdongaljac">JAC_</string>
    <string name="str_dev_waterpumpa">Pump-</string>
    <string name="str_error_accorpwd">account or wrong password</string>
    <string name="str_error_content">contents can not be less than 20 characters</string>
    <string name="str_error_email">a valid email address</string>
    <string name="str_error_email_exist">e-mail already exists</string>
    <string name="str_error_net">network error</string>
    <string name="str_error_pwddiffer">two passwords do not match</string>
    <string name="str_error_unknown">unknown error</string>
    <string name="str_error_wificlose">Wifi unopened</string>
    <string name="str_info_offline">offline</string>
    <string name="str_info_online">online</string>
    <string name="str_info_scaning">Search</string>
    <string name="str_input_account">Please enter your account</string>
    <string name="str_input_email">Please enter the confirmation Email</string>
    <string name="str_input_nickname">Please enter a username</string>
    <string name="str_input_password">Please enter your password</string>
    <string name="str_input_repwd">Please enter the confirmation code</string>
    <string name="str_input_ssid">Please enter SSID</string>
    <string name="str_iotconfig_explain">Connect the power supply and connect the key to two times</string>
    <string name="str_iotconfig_ok">Config success</string>
    <string name="str_iotconfig_wifi">WIFI Intelligent configuration</string>
    <string name="str_is_delete">Sure to delete it?</string>
    <string name="str_lable_handle_tongdong">Adjust light</string>
    <string name="str_lable_line1">light 1</string>
    <string name="str_lable_line2">light 2</string>
    <string name="str_login_sys">landed in ...</string>
</resources>