<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <com.example.wifizhilian.view.PageHead n1:id="@+id/UserInfopageHead" n1:layout_width="fill_parent" n1:layout_height="@dimen/pagehead_height" />
    <LinearLayout n1:orientation="vertical" n1:paddingLeft="@dimen/activity_horizontal_margin" n1:paddingTop="@dimen/activity_vertical_margin" n1:paddingRight="@dimen/activity_horizontal_margin" n1:paddingBottom="@dimen/activity_vertical_margin" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <TableLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:stretchColumns="*">
            <TableRow n1:id="@+id/tableRow1" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                <TextView n1:textSize="@dimen/login_lable_fontsize" n1:id="@+id/DaytextView" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/lable_userinfo_account" />
                <TextView n1:textAppearance="?android:textAppearanceLarge" n1:id="@+id/AccounttextView" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="Large Text" />
            </TableRow>
            <TableRow n1:id="@+id/tableRow2" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                <TextView n1:textSize="@dimen/login_lable_fontsize" n1:id="@+id/AppVertextView" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/lable_userinfo_password" />
                <EditText n1:id="@+id/PassWordeditText" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:ems="10" />
            </TableRow>
            <TableRow n1:id="@+id/tableRow3" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                <TextView n1:textSize="@dimen/login_lable_fontsize" n1:id="@+id/TextView01" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/lable_userinfo_nikename" />
                <EditText n1:id="@+id/NickNameEditText" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:ems="10" />
            </TableRow>
            <TableRow n1:id="@+id/tableRow4" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                <TextView n1:textSize="@dimen/login_lable_fontsize" n1:id="@+id/TextView02" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/lable_userinfo_mobile" />
                <EditText n1:id="@+id/PhoneEditText" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:ems="10" />
            </TableRow>
            <TableRow n1:id="@+id/TableRow01" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                <TextView n1:textSize="@dimen/login_lable_fontsize" n1:id="@+id/TextView03" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/lable_userinfo_email" />
                <EditText n1:id="@+id/EmailEditText" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:ems="10" />
            </TableRow>
        </TableLayout>
        <Button n1:textSize="@dimen/login_lable_fontsize" n1:id="@+id/Submitbutton" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/bnt_submit" />
    </LinearLayout>
</LinearLayout>